# RendererTest

./: .gitignore  .gitignore.txt  CMakeLists.txt  README.md
files/: Markdown.txt  Ray-Tracing.md  coordinate.py  coordinate.txt  temp.txt
include/: AbstractObject.hpp  Camera.hpp  Example.hpp  Global.hpp
include/SDL2/: SDL_haptic.h  SDL_test_compare.h  SDL_test_images.h
include/basic/: AbstractTuple.hpp  Color3.hpp  Point3.hpp  Ray.hpp  Vec3.hpp
include/box/: AbstractBoundingBox.hpp  AxisAlignedBoundingBox.hpp  BVHTree.hpp
include/hittable/: AbstractHittable.hpp  ConstantMedium.hpp  HittableCollection.hpp  Parallelogram.hpp  Polyhedron.hpp  Sphere.hpp  Transform.hpp  Triangle.hpp
include/material/: AbstractLight.hpp  AbstractMaterial.hpp  Dielectric.hpp  DiffuseLight.hpp  Isotropic.hpp  Metal.hpp  Rough.hpp
include/mylibrary/: lib_global.hpp  lib_sdl.hpp
include/test/: Integration.hpp
include/texture/: AbstractTexture.hpp  CheckerBoard.hpp  Image.hpp  PerlinNoise.hpp  SolidColor.hpp
include/util/: AbstractPDF.hpp  CosinePDF.hpp  Denoiser.hpp  HittablePDF.hpp  Matrix.hpp  MixturePDF.hpp  OrthonormalBase.hpp  PerlinGenerator.hpp  Range.hpp  UniformPDF.hpp
src/: Camera.cpp  Example.cpp  Main.cpp
src/util/: Matrix.cpp  PerlinGenerator.cpp
